src-tauri/tests/snapshots/streaming_send_params__params_with_codex_profile.snap
---
source: tests/streaming_send_params.rs
assertion_line: 191
expression: "&params"
---
codexModelProvider: azure
codexProfile: azure
cwd: /abs/workspace
effortLevel: high
fastMode: false
helmorSessionId: s-codex
model: gpt-5-codex
permissionMode: bypassPermissions
prompt: hello
provider: codex
resume: ~
sessionId: sidecar-sess-1
