src-tauri/tests/snapshots/streaming_send_params__params_with_goal_pi_context.snap
---
source: tests/streaming_send_params.rs
expression: "&params"
---
cwd: /abs/workspace
effortLevel: high
fastMode: false
goalDescription: Ship the launch board
goalTitle: Launch Goal
helmorSessionId: s-goal
kanbanSnapshot: "[{\"id\":\"child-1\",\"title\":\"Build UI\"}]"
kanbanWorkspaceId: goal-workspace-1
model: anthropic/claude-opus-4-7
permissionMode: bypassPermissions
prompt: hello
provider: pi
resume: ~
sessionId: sidecar-sess-1
